--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %}
+{% block title %}Opis Projektu{% endblock %}
 {% block content %}
-    <h1>Hello {{name}}</h1>
+<ul>
+    <li>Cel aplikacji</li>
+    <li>Opis działania aplikacji</li>
+    <li>Zastosowane biblioteki</li>
+    <li>Zastosowane podejścia
+    </li>
+</ul>
 {% endblock %}
