--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Opis Projektu{% endblock %}
+{% block title %}Opis projektu{% endblock %}
 {% block content %}
-<ul>
+<ol>
     <li>Cel aplikacji</li>
     <li>Opis działania aplikacji</li>
     <li>Zastosowane biblioteki</li>
-    <li>Zastosowane podejścia
-    </li>
-</ul>
+    <li>Zastosowane podejścia</li>
+</ol>
 {% endblock %}
