--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,37 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="((url_for('static', filename='style.css'))) ">
-    <title>Ceneo Web Scrapper</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
+    <title>Ceneo Web Scraper</title>
 </head>
 <body>
-  <header class="container sticky-top">
-    <h1>Ceneo Web Scrapper</h1>
-    <h2>{% block title %} {% endblock %} </h2>
-  </header>
-  <section class="container">
-    <div class="row" >
-        <div class="col-3">
-            <ul>
-                <li><a href="((url_for('index')))">Strona główna</a></li>
-                <li><a href="((url_for('extract')))">Ekstrakcja opinii</a></li>
-                <li><a href="((url_for('products')))">Lista produktów</a></li>
-                <li><a href="((url_for('author')))">O autorze</a></li>
-
-            </ul>
-        </div>
-        <div class="col-9">
+    <header class="container sticky-top text-center">
+        <h1>Ceneo Web Scraper</h1>
+        <h2>{% block title %} {% endblock %}</h2>
+    </header>
+    <section class="container">
+        <div class="row">
+            <div class="col-3">
+                <ul>
+                    <li><a href="{{url_for('index')}}">Strona główna</a></li>
+                    <li><a href="{{url_for('display_form')}}">Ekstrakcja opinii</a></li>
+                    <li><a href="{{url_for('products')}}">Lista produktów</a></li>
+                    <li><a href="{{url_for('author')}}">O autorze</a></li>
+                </ul>
+            </div>
+            <div class="col-9">
             {% block content %}
+
             {% endblock %}
+            </div>
         </div>
-    </div>
-  </section>
-  <footer class="container sticky-bottom">
-    <p>Wiktor Jurkowski, Uniwersytet Ekonomiczny w Krakowie</p>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-  {% block script %} {% endblock %}
+    </section>
+    <footer class="container sticky-bottom text-center">
+        <p>Wiktor Jurkowski, Uniwersytet Ekonomiczny w Krakowie</p>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    {% block script %} {% endblock %}
 </body>
 </html>
