--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}Opis projektu{% endblock %}
 {% block content %}
 <ol>
-    <li>Cel aplikacji</li>
+    <li class="index1">Cel aplikacji</li>
     <li>Opis działania aplikacji</li>
     <li>Zastosowane biblioteki</li>
     <li>Zastosowane podejścia</li>
