--- a/app/templates/extract.html
+++ b/app/templates/extract.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block title %} Pobieranie opinii o produkcie {% endblock %}
 {% block content %}
+    {% if error is defined %}
+        <p>{{error}}</p>
+    {% endif %}
     <form action="{{url_for('extract')}}" method="post">
         <label for="product_id">Kod produktu</label>
         <input type="text" name="product_id" id="product_id" required>
