--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,36 +7,37 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/2.3.1/css/dataTables.dataTables.css" />
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script src="https://cdn.datatables.net/2.3.1/js/dataTables.js"></script>
     <title>Ceneo Web Scraper</title>
 </head>
 <body>
-    <header class="container sticky-top text-center">
+    <header class="container sticky-top">
         <h1>Ceneo Web Scraper</h1>
-        <h2>{% block title %} {% endblock %}</h2>
     </header>
+    <h2>{% block title %} {% endblock %}</h2>
     <section class="container">
         <div class="row">
             <div class="col-3">
                 <ul>
-                    <li><a href="{{url_for('index')}}">Strona główna</a></li>
-                    <li><a href="{{url_for('display_form')}}">Ekstrakcja opinii</a></li>
-                    <li><a href="{{url_for('products')}}">Lista produktów</a></li>
-                    <li><a href="{{url_for('author')}}">O autorze</a></li>
+                    <li><a href="{{url_for('index')}}">Strona Główna</a></li>
+                    <li><a href="{{url_for('display_form')}}">Ekstrakcja Opinii</a></li>
+                    <li><a href="{{url_for('products')}}">Lista Produktów</a></li>
+                    <li><a href="{{url_for('author')}}">O Autorze</a></li>
                 </ul>
             </div>
             <div class="col-9">
-            {% block content %}
+                {% block content%}
 
-            {% endblock %}
+                {% endblock %}
             </div>
         </div>
     </section>
-    <footer class="container sticky-bottom text-center">
-        <p>Wiktor Jurkowski, Uniwersytet Ekonomiczny w Krakowie</p>
+    <footer class="container sticky-bottom">
+        <p> &copy; Wiktor Jurkowski, Uniwerystet Ekonomiczny w Krakowie</p>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-    <script src="https://cdn.datatables.net/2.3.1/js/dataTables.js"></script>
-    {% block script %} {% endblock %}
+    {% block script %}
+    {% endblock %}
 </body>
 </html>
