--- a/app/templates/extract.html
+++ b/app/templates/extract.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% block title %} Pobieranie opinii o produkcie {% endblock %}
 {% block content %}
-    {% if error is defined %}
+
+    {%if error is defined %}
         <p>{{error}}</p>
     {% endif %}
     <form action="{{url_for('extract')}}" method="post">
-        <label for="product_id">Kod produktu</label>
+        <label for="product_id">kod produktu</label>
         <input type="text" name="product_id" id="product_id" required>
         <button type="submit">Pobierz opinie</button>
     </form>
