--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -1,12 +1,87 @@
 {% extends 'base.html' %}
-{% block title %} {{product_id}} - {{product_name}} {% endblock %}
+{% block title %} {{product_id}} - {{product_name}}{% endblock %}
 {% block content %}
-    {{opinions|safe}}
+    <div class="btn-group" role="group" aria-label="Basic example">
+        <a type="button" class="btn btn-info" href="#">CSV</a>
+        <a type="button" class="btn btn-info" href="#">XLSX</a>
+        <a type="button" class="btn btn-info" href="#">JSON</a>
+        <a type="button" class="btn btn-ceneo" href="{{ url_for('charts', product_id=product_id)}}"><i class="bi bi-bar-chart-fill"></i><i class="bi bi-pie-chart-fill"></i></a>
+
+    </div>  
+    <table class="table table-striped table-hover" id="opinions">
+        <thead>
+            <tr>
+                <!-- <th class="text-center">Id opinii</th> -->
+                <th class="text-center">Autor</th>
+                <th class="text-center">Rekomendacja</th>
+                <th class="text-center"><i class="bi bi-star-fill"></i></th>
+                <!-- <th class="text-center">Treść</th>
+                <th class="text-center">Zalety</th>
+                <th class="text-center">Wady</th> -->
+                <th class="text-center"><i class="bi bi-hand-thumbs-up-fill"></i></th>
+                <th class="text-center"><i class="bi bi-hand-thumbs-down-fill"></i></th>
+                <th class="text-center">Data wystawienia</th>
+                <th class="text-center">Data zakupu</th>
+                <th class="text-center">Szczegóły</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for opinion in opinions %}
+                <tr>
+                    <!-- <td>{{opinion.opinion_id}}</td> -->
+                    <td>{{opinion.author}}</td>
+                    <td>{{opinion.recommendation if opinion.recommendation is not none else ""}}</td>
+                    <td>{{opinion.stars}}</td>
+                    <!-- <td>{{opinion.content|truncate(50)}}</td>
+                    <td>{{opinion.pros|join(', ')|truncate(50)}}</td>
+                    <td>{{opinion.cons|join(', ')|truncate(50)}}</td> -->
+                    <td>{{opinion.useful}}</td>
+                    <td>{{opinion.unuseful}}</td>
+                    <td>{{opinion.post_date|truncate(13, Flase, "")}}</td>
+                    <td>{{opinion.purchase_date|truncate(13, Flase, "") if opinion.purchase_date is not none else "Opinia nie potwierdzona zakupem"}}</td>
+                    <td><button type="button" data-bs-toggle="modal" data-bs-target="#details{{opinion.opinion_id}}" class="btn btn-ceneo">{{opinion.opinion_id}}</button></td>
+                </tr>
+                <!-- Modal -->
+                <div class="modal fade" id="details{{opinion.opinion_id}}" tabindex="-1" aria-labelledby="details{{opinion.opinion_id}}" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Opinia {{opinion.opinion_id}}</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item"><span class="fw-bold">Autor:</span> {{opinion.author}}</li>
+                                    <li class="list-group-item"><span class="fw-bold">Rekomendacja:</span> {{opinion.recommendation if opinion.recommendation is not none else "Nie mam zdania"}}</li>
+                                    <li class="list-group-item"><span class="fw-bold">Liczba gwiazdek:</span> {{opinion.stars}}</li>
+                                    <li class="list-group-item"><span class="fw-bold">Treść:</span> {{opinion.content}}</li>
+                                    <li class="list-group-item"><span class="fw-bold">Lista zalet:</span> {{opinion.pros|join(', ')}}</li>
+                                    <li class="list-group-item"><span class="fw-bold">Lista wad:</span> {{opinion.cons|join(', ')}}</li>
+                                    <li class="list-group-item"><span class="fw-bold">Dla ilu przydatna:</span> {{opinion.useful}}</li>
+                                    <li class="list-group-item"><span class="fw-bold">Dla ilu nieprzydatna:</span> {{opinion.unuseful}}</li>
+                                    <li class="list-group-item"><span class="fw-bold">Data wystawienia opinii:</span> {{opinion.post_date}}</li>
+                                    <li class="list-group-item"><span class="fw-bold">Data zakupu produktu:</span> {{opinion.purchase_date if opinion.purchase_date is not none else ""}}</li>
+                                </ul>
+                            </div>
+                            <div class="modal-footer">
+                            <button type="button" class="btn btn-ceneo" data-bs-dismiss="modal">Zamknij</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </tbody>
+    </table>
+
 {% endblock %}
-{% block script %} 
+
+{% block script %}
 <script>
     let table = new DataTable('#opinions', {
-        // options
+        language: {
+            url:  "https://cdn.datatables.net/plug-ins/1.13.4/i18n/pl.json",
+    },
     });
 </script>
+
 {% endblock %}
